2006-05-09  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: search bar implementation
	* src/PeopleModel.py: search bar implementation
	* src/PageView.py: search bar implementation
	* src/Filters/_SearchBar.py: search bar functionality
	* src/Filters/__init__.py: search bar functionality
	* src/AddMedia.py: remember last directory for images for 
	the session

2006-05-09  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (load_from): Add method.
	* src/GrampsDb/_GrampsXMLDB.py (load_from): Add method.
	* src/GrampsDb/_GrampsGEDDB.py (load_from): Add method.
	* src/GrampsDb/_GrampsDbBase.py (load_from): Add method.
	* src/GrampsDb/_WriteGrdb.py: Use db_copy.
	* src/GrampsDb/_DbUtils.py (db_copy): Add function.
	* src/ViewManager.py: Save as support.
	* src/DataViews/_MapView.py (enable_debug): Set to False to be
	able to see the output besides MapView.

	* src/plugins/FamilyGroup.py: Use triple quotes.
	* src/Exporter.py (Exporter.native_export): Use callback.
	* src/Utils.py (get_new_filename): Add path separator.
	* src/GrampsDb/_WriteGrdb.py: Proper export of tables with and
	without transaction support, add callback.
	* src/plugins/WriteCD.py: Correctly import XmlWriter.
	* src/GrampsDb/_WriteXML.py (write_object): Check whether path is
	empty before removing leading slash.
	* src/GrampsDb/_WriteGedcom.py: Bring to new API.
	* src/plugins/ExportVCard.py: Bring to new API.
	* src/plugins/ExportVCalendar.py: Bring to new API.
	* src/plugins/WriteFtree.py: Bring to new API.
	* src/Filters/_FilterMenu.py (build_filter_menu): Return the menu.
	* src/plugins/WriteGeneWeb.py: Bring to new API.

2006-05-09  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MapView.py: add tool tips to tool buttons
	* src/ViewManager.py: add tool tips to Open button

2006-05-08  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py (get_default_person): Use proper
	way of getting person from the handle.
